Bug 1761839 - Allow user-select: none to override modal dialog selectability. r=sefeng

Instead of enforcing it in C++ use a UA rule instead, so that authors
can override it if needed.

Depends on D142582

Differential Revision: https://phabricator.services.mozilla.com/D142583